tests/src/frontend/syntax/invalid/public_module_member.sk

module M;

fun f1(): void { void }
public
fun f2(): void { void }

module end;

fun main(): String { "Fail" }
